// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserButton snapshot tests Login button should match the snapshot 1`] = `
<button
  className="map-app-header-user-button"
  data-testid="userButton"
  onClick={[Function]}
>
  <img
    alt="login-header-account"
    className="map-app-header-account-image"
    src="test-file-stub"
  />
  <p
    className="map-app-header-account-text"
  >
    loginAction
  </p>
</button>
`;

exports[`UserButton snapshot tests Logout button should match the snapshot 1`] = `
<button
  className="map-app-header-user-button"
  data-testid="userButton"
  onClick={[Function]}
>
  <img
    alt="login-header-account"
    className="map-app-header-account-image"
    src="test-file-stub"
  />
  <p
    className="map-app-header-account-text"
  >
    logged@in.kr
  </p>
</button>
`;
